dogadaji kod kupca napravljeni, samo google kalendar nadodat sutra
dodatno: dodan i završetak događaja
dorađivani search.css i attributes.css